--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/RayNjeri/Firebase-React-App/issues"
   },
-  "homepage": "https://github.com/RayNjeri/Firebase-React-App#readme"
+  "homepage": "https://github.com/RayNjeri/Firebase-React-App#readme",
+  "dependencies": {
+    "babel-loader": "^7.1.2",
+    "react": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "webpack": "^3.10.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.10.1"
+  }
 }
