--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/RayNjeri/Firebase-React-App#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "react": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
-    "webpack": "^3.10.0"
+    "react-hot-loader": "1.2.8",
+    "webpack": "1.10.5"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.10.1"
+    "css-loader": "^0.28.8",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "webpack-dev-server": "1.10.1"
   }
 }
