--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "homepage": "https://github.com/RayNjeri/Firebase-React-App#readme",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "react": "^16.2.0",
+    "babel-core": "5.8.14",
+    "babel-loader": "5.3.2",
+    "react": "0.13.3",
     "react-hot-loader": "1.2.8",
     "webpack": "1.10.5"
   },
   "devDependencies": {
     "css-loader": "^0.28.8",
+    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack-dev-server": "1.10.1"
