--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-core": "5.8.14",
     "babel-loader": "5.3.2",
+    "material-ui": "0.10.2",
     "react": "0.13.3",
     "react-hot-loader": "1.2.8",
     "webpack": "1.10.5"
